@@ -313,7 +313,10 @@ BUGFIXES:
   ZOOKEEPER-731. Zookeeper#delete , #create - async versions miss a verb in the javadoc. (Thomas Koch via camille)
 
   ZOOKEEPER-1108. Various bugs in zoo_add_auth in C. (Dheeraj Agrawal via mahadev)
-  
+ 
+  ZOOKEEPER-981. Hang in zookeeper_close() in the multi-threaded C client. 
+  (Jeremy Stribling via mahadev) 
+
 IMPROVEMENTS:
   ZOOKEEPER-724. Improve junit test integration - log harness information 
   (phunt via mahadev)
